fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ a:hover {
 .bottom-container {
   background-color: #66BFBF;
   padding: 50px 0 20px;
+  height: 80px;
 }
 
 .skill-row {
@@ -94,7 +95,9 @@ a:hover {
 
 .about {
   margin: auto;
-  padding: 100px;
+  padding: 200px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 
